// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-field can mount "picker displayed" Date field 1`] = `
<div id="app">
	<div class="SharpDate SharpDate--open">
		<div class="SharpDate__input-wrapper">
			<input placeholder="DD/MM/YYYY HH:mm" class="SharpDate__input">
			<button type="button" class="SharpDate__clear-button">
				<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpDate__clear-button-icon">
					<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
				</svg>
			</button>
		</div>
		<div class="SharpDate__picker" style="">
			<!---->
			<!---->
		</div>
	</div>
	<div></div>
</div>
`;

exports[`date-field can mount "read only" Date field 1`] = `
<div id="app">
	<div class="SharpDate">
		<div class="SharpDate__input-wrapper">
			<input placeholder="DD/MM/YYYY HH:mm" disabled="disabled" class="SharpDate__input">
			<button type="button" class="SharpDate__clear-button">
				<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpDate__clear-button-icon">
					<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
				</svg>
			</button>
		</div>
		<div class="SharpDate__picker" style="display: none;">
			<!---->
			<!---->
		</div>
	</div>
	<div></div>
</div>
`;

exports[`date-field can mount Date field 1`] = `
<div id="app">
	<div class="SharpDate">
		<div class="SharpDate__input-wrapper">
			<input placeholder="DD/MM/YYYY HH:mm" class="SharpDate__input">
			<button type="button" class="SharpDate__clear-button">
				<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpDate__clear-button-icon">
					<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
				</svg>
			</button>
		</div>
		<div class="SharpDate__picker" style="display: none;">
			<div class="SharpDate__datepicker SharpDate__date">
				<input type="hidden" readonly="readonly" value="20 Août 1996">
				<!---->
				<div class="SharpDate__calendar open" style="position: static;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-month">Août</span>
							<span class="SharpDate__cur-year">1996</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__weekdays">
								<span class="cell day-header">Lun</span>
								<span class="cell day-header">Mar</span>
								<span class="cell day-header">Mer</span>
								<span class="cell day-header">Jeu</span>
								<span class="cell day-header">Ven</span>
								<span class="cell day-header">Sam</span>
								<span class="cell day-header">Dim</span>
							</div>
							<div class="SharpDate__days">
								<div class="SharpDate__dayContainer">
									<span class="cell day blank"></span>
									<span class="cell day blank"></span>
									<span class="cell day blank"></span>
									<span class="cell day">1
									</span>
									<span class="cell day">2
									</span>
									<span class="cell day weekend sat">3
									</span>
									<span class="cell day weekend sun">4
									</span>
									<span class="cell day">5
									</span>
									<span class="cell day">6
									</span>
									<span class="cell day">7
									</span>
									<span class="cell day">8
									</span>
									<span class="cell day">9
									</span>
									<span class="cell day weekend sat">10
									</span>
									<span class="cell day weekend sun">11
									</span>
									<span class="cell day">12
									</span>
									<span class="cell day">13
									</span>
									<span class="cell day">14
									</span>
									<span class="cell day">15
									</span>
									<span class="cell day">16
									</span>
									<span class="cell day weekend sat">17
									</span>
									<span class="cell day weekend sun">18
									</span>
									<span class="cell day">19
									</span>
									<span class="cell day selected">20
									</span>
									<span class="cell day">21
									</span>
									<span class="cell day">22
									</span>
									<span class="cell day">23
									</span>
									<span class="cell day weekend sat">24
									</span>
									<span class="cell day weekend sun">25
									</span>
									<span class="cell day">26
									</span>
									<span class="cell day">27
									</span>
									<span class="cell day">28
									</span>
									<span class="cell day">29
									</span>
									<span class="cell day">30
									</span>
									<span class="cell day weekend sat">31
									</span>
									<span class="cell day blank"></span>
								</div>
							</div>
						</div>
					</div>
				</div>
				<div class="SharpDate__calendar" style="position: static; display: none;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-year">1996</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__monthContainer">
								<span class="cell month">Janvier</span>
								<span class="cell month">Février</span>
								<span class="cell month">Mars</span>
								<span class="cell month">Avril</span>
								<span class="cell month">Mai</span>
								<span class="cell month">Juin</span>
								<span class="cell month">Juillet</span>
								<span class="cell month selected">Août</span>
								<span class="cell month">Septembre</span>
								<span class="cell month">Octobre</span>
								<span class="cell month">Novembre</span>
								<span class="cell month">Décembre</span>
							</div>
						</div>
					</div>
				</div>
				<div class="SharpDate__calendar" style="position: static; display: none;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-decade">1990's</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__yearContainer">
								<span class="cell year">1990</span>
								<span class="cell year">1991</span>
								<span class="cell year">1992</span>
								<span class="cell year">1993</span>
								<span class="cell year">1994</span>
								<span class="cell year">1995</span>
								<span class="cell year selected">1996</span>
								<span class="cell year">1997</span>
								<span class="cell year">1998</span>
								<span class="cell year">1999</span>
							</div>
						</div>
					</div>
				</div>
			</div>
			<span class="time-picker SharpDate__time">
				<header>
					<span class="hint">HH</span>
					<span class="hint">mm</span>
				</header>
				<div class="dropdown">
					<div class="select-list">
						<ul class="hours">
							<li class="">00</li>
							<li class="">01</li>
							<li class="">02</li>
							<li class="">03</li>
							<li class="">04</li>
							<li class="">05</li>
							<li class="">06</li>
							<li class="">07</li>
							<li class="">08</li>
							<li class="">09</li>
							<li class="">10</li>
							<li class="">11</li>
							<li class="active">12</li>
							<li class="">13</li>
							<li class="">14</li>
							<li class="">15</li>
							<li class="">16</li>
							<li class="">17</li>
							<li class="">18</li>
							<li class="">19</li>
							<li class="">20</li>
							<li class="">21</li>
							<li class="">22</li>
							<li class="">23</li>
						</ul>
						<ul class="minutes">
							<li class="">00</li>
							<li class="">30</li>
						</ul>
					</div>
				</div>
			</span>
		</div>
	</div>
	<div></div>
</div>
`;

exports[`date-field can mount Date field without TimePicker 1`] = `
<div id="app">
	<div class="SharpDate">
		<div class="SharpDate__input-wrapper">
			<input placeholder="DD/MM/YYYY HH:mm" class="SharpDate__input">
			<button type="button" class="SharpDate__clear-button">
				<svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpDate__clear-button-icon">
					<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
				</svg>
			</button>
		</div>
		<div class="SharpDate__picker" style="display: none;">
			<div class="SharpDate__datepicker SharpDate__date">
				<input type="hidden" readonly="readonly" value="20 Août 1996">
				<!---->
				<div class="SharpDate__calendar open" style="position: static;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-month">Août</span>
							<span class="SharpDate__cur-year">1996</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__weekdays">
								<span class="cell day-header">Lun</span>
								<span class="cell day-header">Mar</span>
								<span class="cell day-header">Mer</span>
								<span class="cell day-header">Jeu</span>
								<span class="cell day-header">Ven</span>
								<span class="cell day-header">Sam</span>
								<span class="cell day-header">Dim</span>
							</div>
							<div class="SharpDate__days">
								<div class="SharpDate__dayContainer">
									<span class="cell day blank"></span>
									<span class="cell day blank"></span>
									<span class="cell day blank"></span>
									<span class="cell day">1
									</span>
									<span class="cell day">2
									</span>
									<span class="cell day weekend sat">3
									</span>
									<span class="cell day weekend sun">4
									</span>
									<span class="cell day">5
									</span>
									<span class="cell day">6
									</span>
									<span class="cell day">7
									</span>
									<span class="cell day">8
									</span>
									<span class="cell day">9
									</span>
									<span class="cell day weekend sat">10
									</span>
									<span class="cell day weekend sun">11
									</span>
									<span class="cell day">12
									</span>
									<span class="cell day">13
									</span>
									<span class="cell day">14
									</span>
									<span class="cell day">15
									</span>
									<span class="cell day">16
									</span>
									<span class="cell day weekend sat">17
									</span>
									<span class="cell day weekend sun">18
									</span>
									<span class="cell day">19
									</span>
									<span class="cell day selected">20
									</span>
									<span class="cell day">21
									</span>
									<span class="cell day">22
									</span>
									<span class="cell day">23
									</span>
									<span class="cell day weekend sat">24
									</span>
									<span class="cell day weekend sun">25
									</span>
									<span class="cell day">26
									</span>
									<span class="cell day">27
									</span>
									<span class="cell day">28
									</span>
									<span class="cell day">29
									</span>
									<span class="cell day">30
									</span>
									<span class="cell day weekend sat">31
									</span>
									<span class="cell day blank"></span>
								</div>
							</div>
						</div>
					</div>
				</div>
				<div class="SharpDate__calendar" style="position: static; display: none;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-year">1996</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__monthContainer">
								<span class="cell month">Janvier</span>
								<span class="cell month">Février</span>
								<span class="cell month">Mars</span>
								<span class="cell month">Avril</span>
								<span class="cell month">Mai</span>
								<span class="cell month">Juin</span>
								<span class="cell month">Juillet</span>
								<span class="cell month selected">Août</span>
								<span class="cell month">Septembre</span>
								<span class="cell month">Octobre</span>
								<span class="cell month">Novembre</span>
								<span class="cell month">Décembre</span>
							</div>
						</div>
					</div>
				</div>
				<div class="SharpDate__calendar" style="position: static; display: none;">
					<header>
						<span class="prev">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M7.5 10.6L2.8 6l4.7-4.6L6.1 0 0 6l6.1 6z"></path>
							</svg>
						</span>
						<span class="up">
							<span class="SharpDate__cur-decade">1990's</span>
						</span>
						<span class="next">
							<svg width="8" height="12" viewBox="0 0 8 12" fill-rule="evenodd">
								<path d="M0 10.6L4.7 6 0 1.4 1.4 0l6.1 6-6.1 6z"></path>
							</svg>
						</span>
					</header>
					<div class="SharpDate__innerContainer">
						<div class="SharpDate__rContainer">
							<div class="SharpDate__yearContainer">
								<span class="cell year">1990</span>
								<span class="cell year">1991</span>
								<span class="cell year">1992</span>
								<span class="cell year">1993</span>
								<span class="cell year">1994</span>
								<span class="cell year">1995</span>
								<span class="cell year selected">1996</span>
								<span class="cell year">1997</span>
								<span class="cell year">1998</span>
								<span class="cell year">1999</span>
							</div>
						</div>
					</div>
				</div>
			</div>
			<!---->
		</div>
	</div>
	<div></div>
</div>
`;
